--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
         <nav>
             <div class="container">
+                <h1>salom</h1>
                 <a href=""><img class="nav_img" src="./imgs/logo.png" alt=""></a>
                 <ul>
                     <li><a href="">Home</a></li>
